# cold-case-crawler

./: .env.example  .gitignore  DEPLOY.md  LOGO_DESIGN.md  ML_RECOMMENDATIONS.md  SETUP_GUIDE.md  cold_case_schedule.ics  create_full_episode.py  create_real_episode.py  create_snippet.py  demo_script.py  podcast_manager.py  pyproject.toml  railway.json  requirements.txt  run_charley_scraper.py  run_scheduled.sh  run_weekly_automation.py  scrape_case_images.py  serve_frontend.py  setup_cold_case_schema.sql  setup_cron.sh  setup_database.sql  setup_members_table.sql  test_anthropic_key.py  test_audio_generation.py  vercel.json
.kiro/hooks/: audio-trigger.json
.kiro/steering/: brand.md  tech.md
data_pipeline/: __init__.py  config.py  database.py  download_datasets.py  ingest.py
data_pipeline/loaders/: __init__.py  kaggle_loader.py
data_pipeline/scrapers/: __init__.py  charley_scraper.py  virginia_scraper.py
frontend/: cases-dossier.css  cases.css  cases.html  cases.js  charley_cases.json  episode_data.json  index.html  membership.html  player.js  styles.css  vercel.json
src/: __init__.py  config.py  main.py  main_backup.py
src/agents/: __init__.py  maya.py  thorne.py
src/api/: deps.py  membership.py  routes.py
src/models/: __init__.py  case.py  job.py  script.py
src/services/: __init__.py  audio.py  auth.py  budget_tracker.py  calendar_export.py  case_analysis.py  case_selector.py  content_automation.py  crawler.py  database.py  debate.py  image_scraper.py  scheduler.py  stripe_service.py  video.py
src/utils/: errors.py  (+2 more)
tests/: __init__.py  conftest.py
(+8 files in other folders)
